Integrate dynamic interview flow with profile-based start request